tests/error/error22.jan
// error22: Calling of a function, which is not defined

x -> y;

call p
